[package]
name = "learn_rust"
version = "0.1.0"
license = "MIT"
edition = "2021"

[workspace]
members = ["src/*"]

[lib]
name = "learn_rust_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
entity = { path = "src/entity" }
platform = { path = "src/platform" }
render = { path = "src/render" }
script = { path = "src/script" }
sound = { path = "src/sound" }
pollster = "0.2"
log = "0.4"
wgpu = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.12", features = ["webgl"] }
