[package]
name = "sound"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rodio = { version = "0.15", default-features = false, features = ["wav", "flac", "vorbis"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.15", default-features = false, features = ["wav", "flac", "vorbis", "wasm-bindgen"] }
